source/metacall/include/metacall/metacall_value.h

	#define boolean unsigned char
/* -- Enumerations -- */

enum metacall_value_id
{
	METACALL_BOOL = 0,
	METACALL_CHAR = 1,
	METACALL_SHORT = 2,
	METACALL_INT = 3,
	METACALL_LONG = 4,
	METACALL_FLOAT = 5,
	METACALL_DOUBLE = 6,
	METACALL_STRING = 7,
	METACALL_BUFFER = 8,
	METACALL_ARRAY = 9,
	METACALL_MAP = 10,
	METACALL_PTR = 11,
	METACALL_FUTURE = 12,
	METACALL_FUNCTION = 13,
	METACALL_NULL = 14,
	METACALL_CLASS = 15,
	METACALL_OBJECT = 16,
	METACALL_EXCEPTION = 17,
	METACALL_THROWABLE = 18,

	METACALL_SIZE,
	METACALL_INVALID
};
/**
*  @brief
*    Create a value from char @c
*
*  @param[in] c
*    Character will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_char(char c);
/**
*  @brief
*    Create a value from short @s
*
*  @param[in] s
*    Short will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_short(short s);
/**
*  @brief
*    Create a value from integer @i
*
*  @param[in] i
*    Integer will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_int(int i);
/**
*  @brief
*    Create a value from long @l
*
*  @param[in] l
*    Long integer will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_long(long l);
/**
*  @brief
*    Create a value from single precision floating point number @f
*
*  @param[in] f
*    Float will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_float(float f);
/**
*  @brief
*    Create a value from double precision floating point number @d
*
*  @param[in] d
*    Double will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_double(double d);
/**
*  @brief
*    Create a value from a C string @str
*
*  @param[in] str
*    Constant string will be copied into value (needs to be null terminated)
*
*  @param[in] length
*    Length of the constant string
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_string(const char *str, size_t length);
/**
*  @brief
*    Create a value array from array of values @values
*
*  @param[in] values
*    Constant array of values will be copied into value list
*
*  @param[in] size
*    Number of elements contained in the array
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_array(const void *values[], size_t size);
/**
*  @brief
*    Create a value map from array of tuples @map
*
*  @param[in] tuples
*    Constant array of tuples will be copied into value map
*
*  @param[in] size
*    Number of elements contained in the map
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_map(const void *tuples[], size_t size);
/**
*  @brief
*    Create a value from function @f
*
*  @param[in] f
*    Pointer to constant data will be copied into value
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_function(void *f);
/**
*  @brief
*    Create a value of type null
*
*  @return
*    Pointer to value if success, null otherwise
*/
METACALL_API void *metacall_value_create_null(void);
/**
*  @brief
*    Returns the size of the value
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Size in bytes of the value
*/
METACALL_API size_t metacall_value_size(void *v);
/**
*  @brief
*    Returns the amount of values this value contains
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Number of values @v represents
*/
METACALL_API size_t metacall_value_count(void *v);
/**
*  @brief
*    Provide type id of value
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Return type id assigned to value
*/
METACALL_API enum metacall_value_id metacall_value_id(void *v);
/**
*  @brief
*    Convert value @v to boolean
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to boolean
*/
METACALL_API boolean metacall_value_to_bool(void *v);
/**
*  @brief
*    Convert value @v to char
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to char
*/
METACALL_API char metacall_value_to_char(void *v);
/**
*  @brief
*    Convert value @v to short
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to short
*/
METACALL_API short metacall_value_to_short(void *v);
/**
*  @brief
*    Convert value @v to integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to integer
*/
METACALL_API int metacall_value_to_int(void *v);
/**
*  @brief
*    Convert value @v to long integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to long integer
*/
METACALL_API long metacall_value_to_long(void *v);
/**
*  @brief
*    Convert value @v to single precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to float
*/
METACALL_API float metacall_value_to_float(void *v);
/**
*  @brief
*    Convert value @v to double precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to dobule
*/
METACALL_API double metacall_value_to_double(void *v);
/**
*  @brief
*    Convert value @v to string
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to C string (null terminated)
*/
METACALL_API char *metacall_value_to_string(void *v);
/**
*  @brief
*    Convert value @v to array of values
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to array of values
*/
METACALL_API void **metacall_value_to_array(void *v);
/**
*  @brief
*    Convert value @v to map
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to map (array of tuples (array of values))
*/
METACALL_API void **metacall_value_to_map(void *v);
/**
*  @brief
*    Convert value @v to future
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to future
*/
METACALL_API void *metacall_value_to_future(void *v);
/**
*  @brief
*    Convert value @v to function
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to function
*/
METACALL_API void *metacall_value_to_function(void *v);
/**
*  @brief
*    Convert value @v to null
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to null
*/
METACALL_API void *metacall_value_to_null(void *v);
/**
*  @brief
*    Assign integer @i to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] i
*    Integer to be assigned to value @v
*
*  @return
*    Value with integer @i assigned to it
*/
METACALL_API void *metacall_value_from_int(void *v, int i);
/**
*  @brief
*    Assign string @str to value @v, truncates to @v size if it is smaller
*    than @length + 1. It does not add null terminator if truncated.
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] str
*    Constant string to be assigned to value @v (it needs to be null terminated)
*
*  @param[in] length
*    Length of the constant string @str
*
*  @return
*    Value with string @str assigned to it
*/
METACALL_API void *metacall_value_from_string(void *v, const char *str, size_t length);