source/metacall/include/metacall/metacall.h

/**
*  @brief
*    Disables MetaCall logs, must be called before @metacall_initialize.
*
*   When initializing MetaCall, it initializes a default logs to stdout
*   if none was defined. If you want to benchmark or simply disable this
*   default logs, you can call to this function before @metacall_initialize.
*/
METACALL_API void metacall_log_null(void);
/**
*  @brief
*    Initialize MetaCall library
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_initialize(void);
/**
*  @brief
*    Loads a script from file specified by @path
*
*  @param[in] tag
*    Extension of the script
*
*  @param[in] paths
*    Path array of files
*
*  @param[in] size
*    Size of the array @paths
*
*  @param[inout] handle
*    Optional pointer to reference of loaded handle. If the parameter is NULL, the symbols loaded are
*    propagated to the loader scope (i.e they will share the scope between all previously loaded files and they can collide).
*    Otherwise, if we pass a void* pointer set to NULL, it will behave as output parameter, obtaining the reference to the
*    created handle, which can be later on used for calling to functions of that handle. The symbols will not be propagated
*    to the loader scope and they will be private (this prevents collisions). The last case is if we pass an already allocated
*    handle (i.e a void* pointer pointing to an previously loaded handle), then in this case, the symbols loaded will be propagated
*    to the previously allocated handle, and it will behave as a in parameter.
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_load_from_file(const char *tag, const char *paths[], size_t size, void **handle);
/**
*  @brief
*    Call a function anonymously by value array @args
*
*  @param[in] name
*    Name of the function
*
*  @param[in] args
*    Array of pointers to data
*
*  @param[in] size
*    Number of elements of the call
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacallv_s(const char *name, void *args[], size_t size);
/**
*  @brief
*    Call a function anonymously by handle @handle value array @args
*    This function allows to avoid name collisions when calling functions by name
*    Includes @size in order to allow variadic arguments or safe calls
*
*  @param[in] handle
*    Handle where the function belongs
*
*  @param[in] name
*    Name of the function
*
*  @param[in] args
*    Array of pointers to data
*
*  @param[in] size
*    Number of elements of the call
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacallhv_s(void *handle, const char *name, void *args[], size_t size);
/**
*  @brief
*    Call a function anonymously by variable arguments @va_args
*
*  @param[in] name
*    Name of the function
*
*  @param[in] va_args
*    Variadic function parameters
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacall(const char *name, ...);
/**
*  @brief
*    Get the function by @name
*
*  @param[in] name
*    Name of the function
*
*  @return
*    Function reference, null if the function does not exist
*/
METACALL_API void *metacall_function(const char *name);
/**
*  @brief
*    Get minimum number of arguments accepted by function @func
*
*  @param[in] func
*    Function reference
*
*  @return
*    Return number of arguments
*/
METACALL_API size_t metacall_function_size(void *func);
/**
*  @brief
*    Check if the function @func is asynchronous or synchronous
*
*  @param[in] func
*    Function reference
*
*  @return
*    Return 0 if it is synchronous, 1 if it is asynchronous and -1 if the function is NULL
*/
METACALL_API int metacall_function_async(void *func);
/**
*  @brief
*    Return a value representing the handle as a map of functions (or values)
*
*  @param[in] handle
*    Reference to the handle to be described
*
*  @return
*    A value of type map on success, null otherwise
*/
METACALL_API void *metacall_handle_export(void *handle);
/**
*  @brief
*    Call a function anonymously by value array @args and function @func
*
*  @param[in] func
*    Reference to function to be called
*
*  @param[in] args
*    Array of pointers to data
*
*  @param[in] size
*    Number of function arguments
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacallfv_s(void *func, void *args[], size_t size);
/**
*  @brief
*    Register a function by name @name and arguments @va_args
*
*  @param[in] name
*    Name of the function (if it is NULL, function is not registered into host scope)
*
*  @param[in] invoke
*    Pointer to function invoke interface (argc, argv, data)
*
*  @param[out] func
*    Will set the pointer to the function value if the parameter is not null
*    (required for anonymous functions with no name), if the function is anonymous
*    it must be destroyed, otherwise it's destroyed at the end by metacall
*
*  @param[in] return_type
*    Type of return value
*
*  @param[in] size
*    Number of function arguments
*
*  @param[in] va_args
*    Varidic function parameter types
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API int metacall_register(const char *name, void *(*invoke)(size_t, void *[], void *), void **func, enum metacall_value_id return_type, size_t size, ...);
/**
*  @brief
*    Awaits for a promise and registers a callback to be executed when a future is resolved
*
*  @param[in] f
*    The pointer to the future
*
*  @param[in] resolve_callback
*    Pointer to function that will be executed when task completion
*      @param[in] void *
*        Value representing the result of the future resolution
*      @param[in] void *
*        A reference to @data that will be used as a closure for the chain
*      @return
*        Value containing the result of the operation,
*        it will be wrapped into a future later on to be returned by the function
*
*  @param[in] reject_callback
*    Pointer to function that will be executed when task error (signature is identical as resolve_callback)
*
*  @param[in] data
*    Pointer to a context that will act as a closure for the chain
*
*  @return
*    Pointer to value containing the result of the call returned by @resolve_callback or @reject_callback wrapped in a future
*/
METACALL_API void *metacall_await_future(void *f, void *(*resolve_callback)(void *, void *), void *(*reject_callback)(void *, void *), void *data);
/**
*  @brief
*    Executes an asynchronous call to the function and registers a callback to be executed when a future is resolved (it does block)
*
*  @param[in] name
*    The name of the function to be called asynchronously
*
*  @param[in] args
*    Array of pointers to the values to be passed to the function
*
*  @param[in] size
*    Number of elements of the array @args
*
*  @param[in] resolve_callback
*    Pointer to function that will be executed when task completion
*      @param[in] void *
*        Value representing the result of the future resolution
*      @param[in] void *
*        A reference to @data that will be used as a closure for the chain
*      @return
*        Value containing the result of the operation,
*        it will be wrapped into a future later on to be returned by the function
*
*  @param[in] reject_callback
*    Pointer to function that will be executed when task error (signature is identical as resolve_callback)
*
*  @param[in] data
*    Pointer to a context that will act as a closure for the chain
*
*  @return
*    Pointer to value containing the result of the call returned by @resolve_callback or @reject_callback wrapped in a future
*/
METACALL_API void *metacall_await_s(const char *name, void *args[], size_t size, void *(*resolve_callback)(void *, void *), void *(*reject_callback)(void *, void *), void *data);
/**
*  @brief
*    Destroy MetaCall library
*/
METACALL_API void metacall_destroy(void);